--- a/my-lib/pyproject.toml
+++ b/my-lib/pyproject.toml
@@ -15,6 +15,11 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv]
+override-dependencies = [
+    "my-testing-lib @ git+ssh://git@github.com/Wintreist/uv_issue_16484.git@TESTING-BRANCH#subdirectory=my-testing-lib"
+]
+
 [tool.uv.sources]
 my-testing-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "my-testing-lib" }
 other-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "other-lib" }
