--- a/other-lib/pyproject.toml
+++ b/other-lib/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "my-testing-lib[gui]",
+    # "my-testing-lib[gui]",
 ]
 
 [build-system]
