--- a/my-lib/pyproject.toml
+++ b/my-lib/pyproject.toml
@@ -15,9 +15,14 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv]
+constraint-dependencies = [
+    "my-testing-lib @ git+ssh://git@github.com/Wintreist/uv_issue_16484.git@TESTING-BRANCH#subdirectory=my-testing-lib"
+]
+
 [tool.uv.sources]
-my-testing-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "my-testing-lib" }
-other-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "other-lib" }
+# my-testing-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "my-testing-lib" }
+other-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "other-lib", branch = "right_way_constraint" }
 
 [dependency-groups]
 dev = [
